push css responsive

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <!-- Partie droite de la page -->
         <section class="grid-right">
             <div class="left-phone-container">
-                <img src="assets/images/phone_light.png" class="img-phone phone-left" alt="">
+                <img src="assets/images/phone_light.png" class="img-phone large-screen-phone phone-left" alt="">
             </div>
 
             <!-- Bouton DarkMode -->
@@ -61,7 +61,7 @@
                     </div>
 
                 <div class="phone-right-container">
-                    <img src="assets/images/phone_dark.png" class="img-phone phone-right" alt="">
+                    <img src="assets/images/phone_dark.png" class="img-phone large-screen-phone phone-right" alt="">
                 </div>
             </div>    
         </section>    
